--- a/OpenCV_Object segmentation.ipynb
+++ b/OpenCV_Object segmentation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Object Tracking based on color"
+    "# Object segmentation based on color"
    ]
   },
   {
